# ITESM_PI

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
Avance4_equipo10/: 2 DETECTRON2.ipynb
docs/: mkdocs.yml
docs/docs/: index.md
src/piequipo10/data/: download_data.py
