[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "piequipo10"
version = "0.0.1"
description = "Repositorio donde se recopilaran los avances del proyecto con el equipo docente."
authors = [
  { name = "equipo 10" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["piequipo10"]
include = ["pyproject.toml", "piequipo10/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["piequipo10"]
force-sort-within-sections = true

